[package]
name = "ez-auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.7"
actix-web = "3.3.2"
actix-cors = "0.5.4"
env_logger = "0.9.0"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
dotenv = "0.15"
log="0.4"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4.19"
anyhow = "1.0.43"
thiserror = "1.0.29"
bcrypt = "0.10.1"
async-trait = "0.1.51"
derive-getters="0.2.0"
derive_more="0.99.16"
sqlx = { version = "0.4.2", features = [ "runtime-actix-rustls", "postgres", "chrono", "json"] }
rand = "0.8.4"
jsonwebtoken="7"
config="0.11"
nanoid = "0.4.0"
bson = "2.0.0"
